[Chore] 타임캡솝 태그 유형 수정 (#594)
* [ADD]: 타임캡솝 유형 추가

* [Chore]: 타임캡솝 생성 성공 시 반환값 수정

* [Chore]: 값 유효성 검사 함수화

* [Chore]: dto의 toDomain() 사용 및 서비스 함수 내 builder 사용 제거

* [Feat]: 인덱스가 아닌 enum 영문값으로 저장되도록 구현

* [Feat]: 올바른 태그 값이 들어오는지 검사

* [Chore]: 조회 함수 내 태그 불러오는 로직 수정

* [Chore]: validation 내 val 사용 코드 삭제